2017-06-07  Julien Bect  <julien.bect@centralesupelec.fr>

	Optimize for speed

	* core/@stk_kreq_qr/get.m: Use a simple switch.
	* core/@stk_model_gpposterior/stk_predict.m: Call get directly.
	* sampling/@stk_sampcrit_akg/feval.m: Call get directly.

2017-06-06  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_model_gpposterior/stk_predict.m: Improve error messages

	* core/@stk_model_gpposterior/stk_predict.m: Improve the error
	messages corresponding to the case where xt has an incorrect size.

2017-06-05  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/plotmatrix.m: Overload base function

	* arrays/@stk_dataframe/plotmatrix.m: New function, overload base
	function to enrich plotmatrix graphics with variable names when
	possible.
	* admin/octpkg/INDEX: Add the new function to the index.

	Optimize for speed

	* arrays/@stk_dataframe/set_data.m: New function, fast setter.
	* admin/octpkg/INDEX: Add the new function to the index.
	* arrays/@stk_dataframe/set.m: Use set_data.
	* arrays/@stk_factorialdesign/set.m: Use set_data.
	* arrays/@stk_hrect/stk_rescale.m: Optimize for speed.
	* arrays/@stk_hrect/subsasgn.m: Optimize for speed.
	* sampling/stk_sampling_randunif.m: Optimize for speed.
	* sampling/stk_sampling_regulargrid.m: Optimize for speed.

2017-06-03  Julien Bect  <julien.bect@centralesupelec.fr>

	Optimize a few functions for speed

	* arrays/@stk_dataframe/stk_dataframe.m: Optimize
	* arrays/@stk_factorialdesign/stk_factorialdesign.m: Optimize
	* arrays/@stk_hrect/stk_rescale.m: Optimize
	* sampling/stk_sampling_randunif.m: Optimize
	* sampling/stk_sampling_regulargrid.m: Optimize
	* admin/octpkg/patches/matlab-graphics-axis-Axes.patch: Update

	Upcast objects from derived classes to stk_dataframe

	* arrays/@stk_factorialdesign/stk_dataframe.m: New function.
	* arrays/@stk_hrect/stk_dataframe.m: New function.
	* admin/octpkg/INDEX: Add new functions to the index.

2017-05-29  Julien Bect  <julien.bect@centralesupelec.fr>
